# zero2prod

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: audit.yml  general.yml
migrations/: 20250423164429_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
