[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = {version = "1.0.219", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid", "time", "chrono"]}
uuid = {version = "1.16.0", features = ["v4"]}
chrono = "0.4.41"
time = "0.3.41"
env_logger = "0.11.8"
log = "0.4.27"

[dev-dependencies]
reqwest = "0.12.15"
